--- a/TODO
+++ b/TODO
@@ -1,9 +1,5 @@
- * Fix high current operation
-   * Double up caps on existing board with the one that gives ~6uF at
-     12V DC bias
-
  * direct drive experiment
-   * build harness to power and communicate with leg
+   * build data harness for leg
    * code up absolute position calibration for 1x1 gear ratio
 
    * test maximum force achievable at endpoint when retracted and at
@@ -93,6 +89,7 @@ DONE 2019-01-31
  * Added CGA5L1X7R1V106K160AC on top of existing caps on SN11, set PWM
    rate to 60kHz and control rate to 30kHz.  Was able to do 50A
    continuous with only 2V ripple on the bus
+ * Reworked all but one board to double stack the newer caps
 
 DONE 2019-01-30
  * Designed and ordered busbar board from oshpark
